LSP: Fix cmake build
The QtCore dependency was missing, which broke the build in our local CI
(but not on github).

Change-Id: Iad65987941270b905d8f39982b3158fdb33b65ec
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/shared/lsp/CMakeLists.txt
+++ b/src/shared/lsp/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_qbs_library(qtclsp
     STATIC
-    DEPENDS Qt6Core5Compat
+    DEPENDS Qt${QT_VERSION_MAJOR}::Core Qt6Core5Compat
     SOURCES
       algorithm.h
       basemessage.cpp
