GitHub actions: fix Windows build
Change-Id: I52622831cf9d0641ce1c24f53697baf24c891528
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -230,6 +230,7 @@ jobs:
       run: |
         qbs setup-toolchains --detect
         qbs setup-qt $(which qmake).exe qt
+        qbs config profiles.qt.baseProfile MSVC2022-1-x86_x64
         qbs config defaultProfile qt
         qbs config --list
       shell: bash
