Import .clang-format file from QtC
Change-Id: Ifb61a6ac785ec605a3912b87b176251d342df958
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(auto)
 add_subdirectory(benchmarker)
+add_subdirectory(clang-format-test)
 add_subdirectory(fuzzy-test)
 add_subdirectory(lspclient)
