Fix coredumps on mac
Change-Id: I366aee3645140c01ab9aaadaa8c194c2cecbdc66
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -767,7 +767,7 @@ jobs:
       if: matrix.config.xcodeVersion == ''
     - name: Run Tests
       run: |
-        sudo chmod g+w /cores
+        sudo chmod 777 /cores
         ulimit -c unlimited
         ${{ matrix.config.script }} ./release/install-root/usr/local/bin
     - name: Coredump on failure
