docker: Add Ubuntu Jammy image
Ubuntu Focal is almost 4 years old now; some packages, like
LLVM, are quite old as well - it would be nice to use
the same llvm verion that macos github runners use (which is
15, the latest is 17), while only llvm-12 is available on focal.

Change-Id: I5f033abb41ab62c58e204307f04b2a224f8e59bf
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,20 @@ x-default-service: &linux
       - SYS_PTRACE
 
 services:
+  jammy-qt6: &jammy-qt6
+    << : *linux
+    hostname: jammy-qt6
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-qt6-6.5.3_2.1.2-0
+    build:
+      dockerfile: docker/jammy/Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.5.3
+        QTCREATOR_VERSION: 11.0.3
+
+  jammy:
+    << : *jammy-qt6
+
   focal-qt5: &focal-qt5
     << : *linux
     hostname: focal-qt5
