docker: Update static Qt image to Jammy
As well as GitHub actions job.

Change-Id: Ic294a11fa6902f5825a4c73812e1afc0070ffff8
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -373,8 +373,8 @@ jobs:
           }
         - {
             name: 'Run Linux tests (gcc, Qt 6.5 static)',
-            image: 'focal-qt6-static',
-            suffix: 'linux',
+            image: 'jammy-qt6-static',
+            suffix: 'linux-jammy',
             profile: 'qt-gcc_64',
             script: './scripts/test-qt.sh',
           }
