--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,17 @@ services:
         QT_VERSION: 6.5.3
         QTCREATOR_VERSION: 11.0.3
 
+  jammy-qt5:
+    << : *linux
+    hostname: jammy-qt5
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-5.15.2_2.1.2-0
+    build:
+      dockerfile: docker/jammy/Dockerfile
+      context: .
+      args:
+        QT_VERSION: 5.15.2
+        QTCREATOR_VERSION: 11.0.3
+
   jammy:
     << : *jammy-qt6
 
@@ -43,17 +54,6 @@ services:
         QT_VERSION: 6.5.0
         QTCREATOR_VERSION: 11.0.3
 
-  focal-qt5: &focal-qt5
-    << : *linux
-    hostname: focal-qt5
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-5.15.2_1.24.1-0
-    build:
-      dockerfile: docker/focal/Dockerfile
-      context: .
-      args:
-        QT_VERSION: 5.15.2
-        QTCREATOR_VERSION: 9.0.2
-
   focal-qt6:
     << : *linux
     hostname: focal-qt6
@@ -64,9 +64,6 @@ services:
       args:
         QT_VERSION: 6.5.0
         QTCREATOR_VERSION: 9.0.2
-
-  focal:
-    << : *focal-qt5
 
   focal-android-515:
     << : *linux
