--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,65 +65,65 @@ services:
         QT_VERSION: 6.5.0
         QTCREATOR_VERSION: 9.0.2
 
-  focal-android-515:
+  jammy-android-515:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-4
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-5.15.2-0
     build:
-      dockerfile: docker/focal/test-android.Dockerfile
+      dockerfile: docker/jammy/test-android.Dockerfile
       context: .
       args:
-        QT_VERSION: 5.15.1
+        QT_VERSION: 5.15.2
         ANDROID_NDK_VERSION: 23.0.7599858
 
-  focal-android-620:
+  jammy-android-62:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.2.0-4
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-6.2.4-0
     build:
-      dockerfile: docker/focal/test-android.Dockerfile
+      dockerfile: docker/jammy/test-android.Dockerfile
       context: .
       args:
-        QT_VERSION: 6.2.0
+        QT_VERSION: 6.2.4
         ANDROID_NDK_VERSION: 23.0.7599858
 
-  focal-android-650:
+  jammy-android-65:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.5.0-0
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-6.5.0-0
     build:
-      dockerfile: docker/focal/test-android.Dockerfile
+      dockerfile: docker/jammy/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 6.5.0
         ANDROID_NDK_VERSION: 25.1.8937393
 
-  focal-android-ndk-r19c:
+  jammy-android-ndk-r19c:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r19c-0
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r19c-0
     build:
-      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
       context: .
       args:
        ANDROID_NDK_VERSION: 19.2.5345600
 
-  focal-android-ndk-r21e:
+  jammy-android-ndk-r21e:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r21e-0
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r21e-0
     build:
-      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
       context: .
       args:
         ANDROID_NDK_VERSION: 21.4.7075529
 
-  focal-android-ndk-r23:
+  jammy-android-ndk-r23:
     << : *linux
-    hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r23-0
+    hostname: jammy-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r23-0
     build:
-      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
       context: .
       args:
         ANDROID_NDK_VERSION: 23.0.7599858
