docker: update qt4 image to Jammy
Change-Id: Ic81ffb3a65ceb0e373b9bc2981ccd6f6b67b5df1
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -422,7 +422,7 @@ jobs:
           }
         - {
             name: 'Run Linux tests (Qt 4.8.7)',
-            image: 'focal-qt4',
+            image: 'jammy-qt4',
             suffix: 'linux',
             profile: '',
             script: './scripts/test-qt4.sh',
