--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,14 +46,14 @@ jobs:
         path: ~/.ccache
         key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.get-timestamp.outputs.timestamp }}
         restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
-    - name: Pull the Focal Image
-      run: docker-compose pull focal
+    - name: Pull the Docker Image
+      run: docker-compose pull jammy-qt6
     - name: Print ccache stats
-      run: docker-compose run focal ccache -s
+      run: docker-compose run jammy-qt6 ccache -s
     - name: Build Qbs
-      run: docker-compose run focal ${{ matrix.config.script }}
+      run: docker-compose run jammy-qt6 ${{ matrix.config.script }}
     - name: Print ccache stats
-      run: docker-compose run focal ccache -s
+      run: docker-compose run jammy-qt6 ccache -s
     - name: Get archive name
       id: get-archive-name
       run: echo ::set-output name=archive-name::$(git describe)
