--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,15 +34,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create .ccache dir
       run: mkdir -p ~/.ccache
-    - name: prepare timestamp
-      id: get-timestamp
-      run: echo ::set-output name=timestamp::$(date -u +"%Y-%m-%dT%H:%M:%SZ")
     - name: ccache cache files
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ~/.ccache
-        key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.get-timestamp.outputs.timestamp }}
-        restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
+        key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache
     - name: Pull the Docker Image
       run: docker-compose pull ${{ matrix.config.image }}
     - name: Print ccache stats
@@ -52,7 +48,7 @@ jobs:
     - name: Print ccache stats
       run: docker-compose run ${{ matrix.config.image }} ccache -s
     - name: Upload artifacts
-      uses: 'actions/upload-artifact@v2'
+      uses: 'actions/upload-artifact@v4'
       with:
         name: qbs-${{ matrix.config.suffix }}-${{ github.run_id }}.tar.gz
         path: release/qbs-${{ matrix.config.suffix }}-${{ github.run_id }}.tar.gz
@@ -114,15 +110,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create .ccache dir
       run: mkdir -p ~/.ccache
-    - name: prepare timestamp
-      id: get-timestamp
-      run: echo ::set-output name=timestamp::$(date -u +"%Y-%m-%dT%H:%M:%SZ")
     - name: ccache cache files
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ~/.ccache
-        key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.get-timestamp.outputs.timestamp }}
-        restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
+        key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache
     - name: Pull the Docker Image
       run: docker-compose pull ${{ matrix.config.image }}
     - name: Print ccache stats
@@ -165,15 +157,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create .ccache dir
       run: mkdir -p ~/.ccache
-    - name: prepare timestamp
-      id: get-timestamp
-      run: echo ::set-output name=timestamp::$(date -u +"%Y-%m-%dT%H:%M:%SZ")
     - name: ccache cache files
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ~/.ccache
-        key: ${{ runner.os }}-ccache-${{ steps.get-timestamp.outputs.timestamp }}
-        restore-keys: ${{ runner.os }}-ccache-
+        key: ${{ runner.os }}-ccache
     - name: Install required packages
       run: |
         brew install ccache p7zip
@@ -198,7 +186,7 @@ jobs:
     - name: Print ccache stats
       run: ccache -s
     - name: Upload artifacts
-      uses: 'actions/upload-artifact@v2'
+      uses: 'actions/upload-artifact@v4'
       with:
         name: qbs-macos-${{ github.run_id }}.tar.gz
         path: release/qbs-macos-${{ github.run_id }}.tar.gz
@@ -219,18 +207,13 @@ jobs:
       QT_ASSUME_STDERR_HAS_CONSOLE: 1
     steps:
     - uses: actions/checkout@v1
-    - name: prepare timestamp
-      id: get-timestamp
-      run: echo ::set-output name=timestamp::$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-      shell: bash
     - name: clcache cache files
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ~/clcache
-        key: ${{ runner.os }}-msvc-clcache-${{ steps.get-timestamp.outputs.timestamp }}
-        restore-keys: ${{ runner.os }}-msvc-clcache-
+        key: ${{ runner.os }}-msvc-clcache
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.8
     - name: Install required packages
@@ -260,7 +243,7 @@ jobs:
     - name: Print clcache stats
       run: clcache -s
     - name: Upload artifacts
-      uses: 'actions/upload-artifact@v2'
+      uses: 'actions/upload-artifact@v4'
       with:
         name: qbs-windows-${{ github.run_id }}.zip
         path: release/qbs-windows-${{ github.run_id }}.zip
@@ -281,18 +264,13 @@ jobs:
       CCACHE_DIR: ${{ github.workspace }}\ccache
     steps:
     - uses: actions/checkout@v1
-    - name: prepare timestamp
-      id: get-timestamp
-      run: echo ::set-output name=timestamp::$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-      shell: bash
     - name: ccache cache files
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: ${{ github.workspace }}/ccache
-        key: ${{ runner.os }}-mingw-ccache-${{ steps.get-timestamp.outputs.timestamp }}
-        restore-keys: ${{ runner.os }}-mingw-ccache-
+        key: ${{ runner.os }}-mingw-ccache
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.8
     - name: Install required packages
@@ -324,7 +302,7 @@ jobs:
     - name: Print ccache stats
       run: ccache -s
     - name: Upload artifacts
-      uses: 'actions/upload-artifact@v2'
+      uses: 'actions/upload-artifact@v4'
       with:
         name: qbs-windows-mingw-${{ github.run_id }}.zip
         path: release/qbs-windows-mingw-${{ github.run_id }}.zip
@@ -423,7 +401,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-${{ matrix.config.suffix }}-${{ github.run_id }}.tar.gz
         path: ./
@@ -444,7 +422,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-linux-jammy-${{ github.run_id }}.tar.gz
         path: ./
@@ -483,7 +461,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-windows-${{ github.run_id }}.zip
         path: ./
@@ -707,7 +685,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-macos-${{ github.run_id }}.tar.gz
         path: ./
@@ -810,7 +788,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-windows-${{ github.run_id }}.zip
         path: ./
@@ -913,7 +891,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: qbs-windows-${{ github.run_id }}.zip
         path: ./
