GitHub actions: fix doc job
Change-Id: I9d462f5a960cf79ad6ffa8a74689a6e3e27d6425
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,10 +27,10 @@ jobs:
       WITH_TESTS: 0
     steps:
     - uses: actions/checkout@v1
-    - name: Pull the Focal Image
-      run: docker-compose pull focal
+    - name: Pull the Docker Image
+      run: docker-compose pull jammy
     - name: Build Qbs Docs
-      run: docker-compose run focal ${{ matrix.config.script }}
+      run: docker-compose run jammy ${{ matrix.config.script }}
     - name: Upload artifacts
       uses: 'actions/upload-artifact@v2'
       with:
