--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -232,18 +232,6 @@ jobs:
         path: ~/clcache
         key: ${{ runner.os }}-msvc-clcache-${{ steps.get-timestamp.outputs.timestamp }}
         restore-keys: ${{ runner.os }}-msvc-clcache
-    - name: Install Conan
-      run: |
-        choco install conan
-        choco install ninja
-        echo "C:\\Program Files\\conan\\conan" >> $GITHUB_PATH
-        echo "C:\\ProgramData\\chocolatey\\lib\\ninja\\tools" >> $GITHUB_PATH
-      shell: bash
-    - name: Configure Conan
-      run: |
-        conan config install src/conan/
-        ./scripts/setup-conan-profiles.sh
-      shell: bash
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -869,10 +857,11 @@ jobs:
       shell: bash
     - name: Install Conan
       if: matrix.config.toolchain == 'win64_msvc2019_64'
+      uses: turtlebrowser/get-conan@main
+    - name: Install Ninja
+      if: matrix.config.toolchain == 'win64_msvc2019_64'
       run: |
-        choco install conan
         choco install ninja
-        echo "C:\\Program Files\\conan\\conan" >> $GITHUB_PATH
         echo "C:\\ProgramData\\chocolatey\\lib\\ninja\\tools" >> $GITHUB_PATH
       shell: bash
     - name: Configure Conan
